Refactored with main